--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Phone no:+91 8630308906</p>
+<p>Email: manasthapa2005@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  142/A Nanda devi colony<br/>
+  Vilaspur Kandli<br />
+  Dehradun<br />
+  India <br />
 </p>
